manifest/objects/LVGO__CMCAssociation__c.object
<CustomObject>
    <description>The junction that connects Client Member Code records to Program Overview records (CMC to Contract object) and Registration Code records (CMC to CMC)</description>
    <fields>
        <fullName>LVGO__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to which the Client Member Code is associated</description>
        <inlineHelpText>The account to which the Client Member Code is associated</inlineHelpText>
        <label>Account</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>CMC Associations</relationshipLabel>
        <relationshipName>CMC_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__ClientMemberCode__c</fullName>
        <description>The parent Client Member Code associated to either the Registration Code or the Program Overview</description>
        <label>Client Member Code</label>
        <referenceTo>LVGO__ClientMemberCode__c</referenceTo>
        <relationshipLabel>CMC Associations</relationshipLabel>
        <relationshipName>CMC_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Member_Code_Client_Account__c</fullName>
        <formula>LVGO__ClientMemberCode__r.LVGO__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Member Code: Client Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Code__c</fullName>
        <description>The code from the master Client Member Code record</description>
        <formula>LVGO__ClientMemberCode__r.LVGO__ClientMemberCode__c</formula>
        <inlineHelpText>The code from the master Client Member Code record</inlineHelpText>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__ProgramOverview__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Program Overview associated to the parent Client Member Code</description>
        <inlineHelpText>The Program Overview associated to the parent Client Member Code</inlineHelpText>
        <label>Program Overview</label>
        <referenceTo>LVGO__Contract__c</referenceTo>
        <relationshipLabel>Program Overview Associations</relationshipLabel>
        <relationshipName>Program_Overview_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Name__c</fullName>
        <formula>TEXT(LVGO__ProgramOverview__r.LVGO__Program_Name__c)</formula>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Number_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; LVGO__ProgramOverview__r.Id, LVGO__ProgramOverview__r.LVGO__ContractNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Overview_Name__c</fullName>
        <formula>LVGO__ProgramOverview__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Overview Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__RegistrationCode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Registration Code associated to the parent Client Member Code</description>
        <label>Registration Only Code</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>You can only associate Registration Code CMCs to the Population Code CMCs.</errorMessage>
            <filterItems>
                <field>LVGO__ClientMemberCode__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Registration Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LVGO__ClientMemberCode__c</referenceTo>
        <relationshipLabel>Registration Only Associations</relationshipLabel>
        <relationshipName>RegistrationOnly</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LV CMC Association</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMCA-{000000}</displayFormat>
        <label>CMC Association ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LV CMC Associations</pluralLabel>
    <recordTypes>
        <fullName>LVGO__CMC_to_Program</fullName>
        <active>true</active>
        <label>CMC to Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__CMC_to_Registration</fullName>
        <active>true</active>
        <label>CMC to Registration</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>